# MineLauncher

./: .gitignore  MANIFEST.in  README.md  README_zh.md  launcher.py  pyproject.toml  test.py  吹牛逼
src/: main.py  test.py
src/app/: app.py  info.py  types.py
src/app/littledl/: __init__.py  batch.py
src/app/pages/: about_page.py  core_download_page.py  download_manager_page.py  download_settings_page.py  first_run_page.py  home_page.py  java_settings_page.py  login_page.py  mod_detail_page.py  mod_download_page.py  resources_page.py  settings_page.py  shader_download_page.py  version_directory_page.py  versions_page.py
src/app/services/: account_service.py  auth_service.py  config_service.py  download_manager.py  download_service.py  download_service_v2.py  i18n_service.py  java_detector.py  launch_service.py  logger_service.py  mod_service.py  oauth_funcs.py  test.py  utils_service.py  version_detector.py
src/assets/lang/: en.yaml  ja.yaml  wy-hx.yaml  zh-cn.yaml
src/lang/: en-us.yaml  en.yaml  zh-cn.yaml
