[project]
name = "Minelauncher"
version = "0.1.0"
description = "A highly customizable Minecraft launcher Supports startup and management of bedrock and Java"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "shu-shu-1", email = "zs3458222@outlook.com" }
]
dependencies = [
  "flet==0.27.6",
  "loguru>=0.7.3",
  "orjson>=3.11.1",
  "requests>=2.32.4",
  "rtoml>=0.12.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.littletreestudio.minelauncher"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Minelauncher"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Little Tree Studio"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.6",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}

